fixing cmake file, adding cmake settings json
add build helper script

extend windows build script to use vcpkg

Adding check for invalid windows options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
 endif()
 
-project(vowpal_wabbit C CXX)
-set(CMAKE_CXX_STANDARD 11)
-
 # VW targets Windows 8.1 SDK
 if(WIN32)
   set(CMAKE_SYSTEM_VERSION 8.1 CACHE TYPE INTERNAL FORCE)
 endif()
+
+project(vowpal_wabbit C CXX)
+set(CMAKE_CXX_STANDARD 11)
 
 # Read version into variable
 file(READ version.txt PACKAGE_VERSION)
@@ -39,6 +39,10 @@ option(BUILD_DOCS "Add documentation targets." Off)
 option(LTO "Enable Link Time optimization (Requires Release build, only works with clang and linux/mac for now)." Off)
 
 string(TOUPPER "${CMAKE_BUILD_TYPE}" CONFIG)
+
+if(WIN32 AND (PROFILE OR VALGRIND_PROFILE OR GCOV OR STATIC_LINK_VW OR BUILD_JAVA OR BUILD_PYTHON OR LTO))
+  message(FATAL_ERROR "Unsupported option enabled on Win32 build")
+endif()
 
 # Add -ffast-math for speed, remove for testability.
 set(linux_release_config -O3 -fno-strict-aliasing -msse2 -mfpmath=sse)
@@ -79,10 +83,6 @@ if(GCOV)
   set(linux_flags ${linux_flags} -g -O0 -fprofile-arcs -ftest-coverage -fno-strict-aliasing -pg)
 endif()
 
-set(windows_release_config /GL /O2 /Gy /Oi /Ob2 /Ot /Oy /GT /MD)
-set(windows_debug_config /INCREMENTAL /Od /Zi /analyze-)
-set(windows_flags $<$<CONFIG:DEBUG>:${windows_debug_config}> $<$<CONFIG:RELEASE>:${windows_release_config}>)
-
 # TODO move to consuming vcpkg of this dependency
 add_library(rapidjson INTERFACE)
 target_include_directories(rapidjson INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/rapidjson/include)
@@ -98,6 +98,7 @@ if(STATIC_LINK_VW)
   SET(BUILD_SHARED_LIBS OFF)
 else()
   set(Boost_USE_STATIC_LIBS OFF)
+  add_definitions( -DBOOST_ALL_DYN_LINK )
 endif()
 
 set(Boost_USE_MULTITHREADED ON)
