--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rapidjson"]
 	path = rapidjson
 	url = https://github.com/Tencent/rapidjson.git
+[submodule "external/pybind11"]
+	path = external/pybind11
+	url = git@github.com:pybind/pybind11.git
